WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91103
[chromium][Mac]
r122400
broke 10.6 build
https://bugs.webkit.org/show_bug.cgi?id=91103
Summary
[chromium][Mac] r122400 broke 10.6 build
Robert Sesek
Reported
2012-07-12 09:15:55 PDT
Regression from
https://bugs.webkit.org/show_bug.cgi?id=91015
You get the following error messages when building ToT Chromium with the 10.6 SDK (soon to be our default SDK). It looks like the availability macros used are incorrect. ../../third_party/WebKit/Source/WebKit/chromium/src/mac/WebInputEventFactory.mm:64:5: error: redefinition of enumerator 'NSEventTypeBeginGesture' NSEventTypeBeginGesture = 19, ^ /Applications/Xcode44-DP7.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.6.sdk/System/Library/Frameworks/AppKit.framework/Headers/NSEvent.h:51:5: note: previous definition is here NSEventTypeBeginGesture = 19, ^ ../../third_party/WebKit/Source/WebKit/chromium/src/mac/WebInputEventFactory.mm:65:5: error: redefinition of enumerator 'NSEventTypeEndGesture' NSEventTypeEndGesture = 20 ^ /Applications/Xcode44-DP7.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.6.sdk/System/Library/Frameworks/AppKit.framework/Headers/NSEvent.h:52:5: note: previous definition is here NSEventTypeEndGesture = 20 ^ ../../third_party/WebKit/Source/WebKit/chromium/src/mac/WebInputEventFactory.mm:63:1: error: declaration does not declare anything [-Werror,-Wmissing-declarations] enum { ^~~~ 3 errors generated.
Attachments
Patch
(2.10 KB, patch)
2012-07-12 09:24 PDT
,
Robert Sesek
no flags
Details
Formatted Diff
Diff
Patch
(2.11 KB, patch)
2012-07-12 09:30 PDT
,
Robert Sesek
no flags
Details
Formatted Diff
Diff
Patch
(2.09 KB, patch)
2012-07-12 11:53 PDT
,
Robert Sesek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Robert Sesek
Comment 1
2012-07-12 09:24:31 PDT
Created
attachment 151971
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-12 09:27:51 PDT
Attachment 151971
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Robert Sesek
Comment 3
2012-07-12 09:30:21 PDT
Created
attachment 151973
[details]
Patch
Robert Sesek
Comment 4
2012-07-12 09:30:42 PDT
Please review.
Mark Mentovai
Comment 5
2012-07-12 09:46:05 PDT
Comment on
attachment 151973
[details]
Patch LGTM. It’s optional to #include <Availability.h> because the ApplicationServices and Cocoa #includes will definitely have brought it in.
Mark Mentovai
Comment 6
2012-07-12 10:00:47 PDT
***
Bug 91113
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 7
2012-07-12 10:12:01 PDT
Comment on
attachment 151973
[details]
Patch Clearing flags on attachment: 151973 Committed
r122477
: <
http://trac.webkit.org/changeset/122477
>
WebKit Review Bot
Comment 8
2012-07-12 10:12:15 PDT
All reviewed patches have been landed. Closing bug.
Tony Chang
Comment 9
2012-07-12 10:26:28 PDT
This appears to have broken the Chromium Mac Release build:
http://build.webkit.org/builders/Chromium%20Mac%20Release/builds/39757/steps/compile-webkit/logs/stdio
CompileC ./xcodebuild/WebKit.build/Release/webkit.build/Objects-normal/i386/WebInputEventFactory.o src/mac/WebInputEventFactory.mm normal i386 objective-c++ com.apple.compilers.llvmgcc42 cd /Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium setenv LANG en_US.US-ASCII /Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/third_party/llvm-build/Release+Asserts/bin/clang -x objective-c++ -arch i386 -fmessage-length=0 -pipe -Wno-trigraphs -fno-exceptions -fno-rtti -O3 -Werror -Wnewline-eof -DCHROMIUM_BUILD -DENABLE_ONE_CLICK_SIGNIN -DENABLE_REMOTING=1 -DENABLE_WEBRTC=1 -DENABLE_CONFIGURATION_POLICY -DENABLE_INPUT_SPEECH -DENABLE_NOTIFICATIONS -DENABLE_HIDPI=1 -DENABLE_GPU=1 -DENABLE_EGLIMAGE=1 -DUSE_SKIA=1 -DENABLE_TASK_MANAGER=1 -DENABLE_WEB_INTENTS=1 -DENABLE_EXTENSIONS=1 -DENABLE_PLUGIN_INSTALLATION=1 -DENABLE_PROTECTOR_SERVICE=1 -DENABLE_SESSION_SERVICE=1 -DENABLE_THEMES=1 -DENABLE_BACKGROUND=1 -DENABLE_PROMO_RESOURCE_SERVICE=1 -DENABLE_AUTOMATION=1 -DENABLE_PRINTING=1 -DENABLE_CAPTIVE_PORTAL_DETECTION=1 -DWEBKIT_IMPLEMENTATION=1 -DENABLE_3D_PLUGIN=1 -DENABLE_BATTERY_STATUS=0 -DENABLE_BLOB=1 -DENABLE_BLOB_SLICE=1 -DENABLE_CHANNEL_MESSAGING=1 -DENABLE_CSP_NEXT=1 -DENABLE_CSS3_FLEXBOX=1 -DENABLE_CSS_BOX_DECORATION_BREAK=1 -DENABLE_CSS_EXCLUSIONS=1 -DENABLE_CSS_FILTERS=1 -DENABLE_CSS_IMAGE_SET=1 -DENABLE_CSS_IMAGE_RESOLUTION=0 -DENABLE_CSS_REGIONS=1 -DENABLE_CSS_SHADERS=1 -DENABLE_CSS_VARIABLES=0 -DENABLE_CUSTOM_SCHEME_HANDLER=0 -DENABLE_DATALIST=1 -DENABLE_DASHBOARD_SUPPORT=0 -DENABLE_DATA_TRANSFER_ITEMS=1 -DENABLE_DETAILS=1 -DENABLE_DEVICE_ORIENTATION=1 -DENABLE_DIALOG_ELEMENT=1 -DENABLE_DIRECTORY_UPLOAD=1 -DENABLE_DOWNLOAD_ATTRIBUTE=1 -DENABLE_ENCRYPTED_MEDIA=1 -DENABLE_FILE_SYSTEM=1 -DENABLE_FILTERS=1 -DENABLE_FULLSCREEN_API=1 -DENABLE_GAMEPAD=1 -DENABLE_GEOLOCATION=1 -DENABLE_GESTURE_EVENTS=1 -DENABLE_ICONDATABASE=0 -DENABLE_IFRAME_SEAMLESS=1 -DENABLE_INDEXED_DATABASE=1 -DENABLE_INPUT_TYPE_DATE=1 -DENABLE_JAVASCRIPT_DEBUGGER=1 -DENABLE_LEGACY_CSS_VENDOR_PREFIXES=0 -DENABLE_LEGACY_VIEWPORT_ADAPTION=1 -DENABLE_LEGACY_WEBKIT_BLOB_BUILDER=1 -DENABLE_LINK_PREFETCH=1 -DENABLE_LINK_PRERENDER=1 -DENABLE_MEDIA_SOURCE=1 -DENABLE_MEDIA_STATISTICS=1 -DENABLE_METER_TAG=1 -DENABLE_MHTML=1 -DENABLE_MICRODATA=0 -DENABLE_MUTATION_OBSERVERS=1 -DENABLE_PAGE_VISIBILITY_API=1 -DENABLE_POINTER_LOCK=1 -DENABLE_PROGRESS_TAG=1 -DENABLE_QUOTA=1 -DENABLE_REGISTER_PROTOCOL_HANDLER=1 -DENABLE_REQUEST_ANIMATION_FRAME=1 -DENABLE_RUBY=1 -DENABLE_SANDBOX=1 -DENABLE_SCRIPTED_SPEECH=1 -DENABLE_SHADOW_DOM=1 -DENABLE_SMOOTH_SCROLLING=1 -DENABLE_SQL_DATABASE=1 -DENABLE_STYLE_SCOPED=1 -DENABLE_SVG=1 -DENABLE_SVG_FONTS=1 -DENABLE_TEXT_AUTOSIZING=1 -DENABLE_TOUCH_ADJUSTMENT=1 -DENABLE_TOUCH_EVENTS=1 -DENABLE_TOUCH_ICON_LOADING=0 -DENABLE_TOUCH_SLIDER=1 -DENABLE_V8_SCRIPT_DEBUG_SERVER=1 -DENABLE_VIDEO=1 -DENABLE_VIDEO_TRACK=1 -DENABLE_VIEWPORT=1 -DENABLE_WEBGL=1 -DENABLE_WEB_SOCKETS=1 -DENABLE_WEB_TIMING=1 -DENABLE_WORKERS=1 -DENABLE_XHR_RESPONSE_BLOB=1 -DENABLE_XSLT=1 -DWTF_USE_LEVELDB=1 -DWTF_USE_BUILTIN_UTF8_CODEC=1 -DWTF_USE_OPENTYPE_SANITIZER=1 -DWTF_USE_RTL_SCROLLBAR=1 -DWTF_USE_SKIA_TEXT=1 -DWTF_USE_WEBP=1 -DWTF_USE_WEBKIT_IMAGE_DECODERS=1 -DENABLE_CALENDAR_PICKER=1 -DENABLE_INPUT_SPEECH=1 -DENABLE_INPUT_TYPE_COLOR=1 -DENABLE_JAVASCRIPT_I18N_API=1 -DENABLE_LEGACY_NOTIFICATIONS=1 -DENABLE_MEDIA_CAPTURE=0 -DENABLE_MEDIA_STREAM=1 -DENABLE_NOTIFICATIONS=1 -DENABLE_ORIENTATION_EVENTS=0 -DENABLE_OVERFLOW_SCROLLING=0 -DENABLE_PAGE_POPUP=1 -DENABLE_SHARED_WORKERS=1 -DENABLE_WEB_AUDIO=1 -DENABLE_3D_RENDERING=1 -DENABLE_ACCELERATED_2D_CANVAS=1 -DWTF_USE_ACCELERATED_COMPOSITING=1 -DENABLE_RUBBER_BANDING=1 -DWTF_USE_SKIA_ON_MAC_CHROMIUM=1 -DBUILDING_CHROMIUM__=1 -DUSE_SYSTEM_MALLOC=1 -DWTF_USE_NEW_THEME=1 -DU_USING_ICU_NAMESPACE=0 -DSK_BUILD_NO_IMAGE_ENCODE -DGR_GL_CUSTOM_SETUP_HEADER="GrGLConfig_chrome.h" -DGR_AGGRESSIVE_SHADER_OPTS=1 -DU_STATIC_IMPLEMENTATION -D__STDC_FORMAT_MACROS -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -isysroot /Developer/SDKs/MacOSX10.5.sdk -fvisibility=hidden -fvisibility-inlines-hidden -fno-threadsafe-statics -mmacosx-version-min=10.5 -gdwarf-2 -Wall -Wendif-labels -Wextra -Wno-unused-parameter -Wno-missing-field-initializers -Wheader-hygiene -Wno-char-subscripts -Wno-unused-function -Wno-unnamed-type-template-args -Wno-c++11-extensions -Wno-covered-switch-default -Wglobal-constructors -Wexit-time-destructors -F/Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/xcodebuild/Release -I/Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/xcodebuild/Release/include -Ithird_party/icu/public/common -Ithird_party/icu/public/i18n -Ipublic -Isrc -I../../WebKit/chromium/third_party/angle/include -I../../WebKit/chromium/third_party/skia/include/utils -Ipublic/mac -Ithird_party/khronos -I. -I../../WebCore -I../.. -I../../WebCore/Modules/battery -I../../WebCore/Modules/filesystem -I../../WebCore/Modules/filesystem/chromium -I../../WebCore/Modules/gamepad -I../../WebCore/Modules/geolocation -I../../WebCore/Modules/intents -I../../WebCore/Modules/indexeddb -I../../WebCore/Modules/mediastream -I../../WebCore/Modules/notifications -I../../WebCore/Modules/protocolhandler -I../../WebCore/Modules/quota -I../../WebCore/Modules/speech -I../../WebCore/Modules/webaudio -I../../WebCore/Modules/webdatabase -I../../WebCore/Modules/webdatabase/chromium -I../../WebCore/Modules/websockets -I../../WebCore/accessibility -I../../WebCore/accessibility/chromium -I../../WebCore/bindings -I../../WebCore/bindings/generic -I../../WebCore/bindings/v8 -I../../WebCore/bindings/v8/custom -I../../WebCore/bindings/v8/specialization -I../../WebCore/bridge -I../../WebCore/bridge/jni -I../../WebCore/bridge/jni/v8 -I../../WebCore/css -I../../WebCore/dom -I../../WebCore/dom/default -I../../WebCore/editing -I../../WebCore/fileapi -I../../WebCore/history -I../../WebCore/html -I../../WebCore/html/canvas -I../../WebCore/html/parser -I../../WebCore/html/shadow -I../../WebCore/html/track -I../../WebCore/inspector -I../../WebCore/loader -I../../WebCore/loader/appcache -I../../WebCore/loader/archive -I../../WebCore/loader/archive/cf -I../../WebCore/loader/archive/mhtml -I../../WebCore/loader/cache -I../../WebCore/loader/icon -I../../WebCore/mathml -I../../WebCore/page -I../../WebCore/page/animation -I../../WebCore/page/chromium -I../../WebCore/page/scrolling -I../../WebCore/platform -I../../WebCore/platform/animation -I../../WebCore/platform/audio -I../../WebCore/platform/audio/chromium -I../../WebCore/platform/chromium -I../../WebCore/platform/chromium/support -I../../WebCore/platform/graphics -I../../WebCore/platform/graphics/chromium -I../../WebCore/platform/graphics/filters -I../../WebCore/platform/graphics/filters/arm -I../../WebCore/platform/graphics/gpu -I../../WebCore/platform/graphics/opentype -I../../WebCore/platform/graphics/skia -I../../WebCore/platform/graphics/transforms -I../../WebCore/platform/image-decoders -I../../WebCore/platform/image-decoders/bmp -I../../WebCore/platform/image-decoders/gif -I../../WebCore/platform/image-decoders/ico -I../../WebCore/platform/image-decoders/jpeg -I../../WebCore/platform/image-decoders/png -I../../WebCore/platform/image-decoders/skia -I../../WebCore/platform/image-decoders/webp -I../../WebCore/platform/image-encoders/skia -I../../WebCore/platform/leveldb -I../../WebCore/platform/mediastream -I../../WebCore/platform/mediastream/chromium -I../../WebCore/platform/mock -I../../WebCore/platform/network -I../../WebCore/platform/network/chromium -I../../WebCore/platform/sql -I../../WebCore/platform/text -I../../WebCore/platform/text/transcoder -I../../WebCore/plugins -I../../WebCore/plugins/chromium -I../../WebCore/rendering -I../../WebCore/rendering/style -I../../WebCore/rendering/svg -I../../WebCore/storage -I../../WebCore/storage/chromium -I../../WebCore/svg -I../../WebCore/svg/animation -I../../WebCore/svg/graphics -I../../WebCore/svg/graphics/filters -I../../WebCore/svg/properties -I../../ThirdParty/glu -I../../WebCore/workers -I../../WebCore/xml -I../../WebCore/xml/parser -I../../WebCore/platform/audio/mac -I../../WebCore/platform/cocoa -I../../WebCore/platform/graphics/cg -I../../WebCore/platform/graphics/cocoa -I../../WebCore/platform/graphics/mac -I../../WebCore/platform/mac -I../../WebCore/platform/text/mac -I../../WebCore/platform/graphics/harfbuzz -I../../WebCore/platform/graphics/harfbuzz/ng -I../../WebKit/chromium/third_party/apple_webkit -I../../WebKit/mac/WebCoreSupport -I/Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/xcodebuild/DerivedSources/Release/webkit -I/Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/xcodebuild/DerivedSources/Release/webkit/bindings -I../../WTF -I../../JavaScriptCore -Ithird_party/qcms/src -I../../Platform/chromium -I/Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/xcodebuild/DerivedSources/Release/webcore_headers -Iskia/config -Ithird_party/skia/include/config -Ithird_party/skia/include/core -Ithird_party/skia/include/effects -Ithird_party/skia/include/pdf -Ithird_party/skia/include/gpu -Ithird_party/skia/include/gpu/gl -Ithird_party/skia/include/ports -Ithird_party/skia/include/utils -Iskia/ext -Ithird_party/skia/include/utils/mac -Ithird_party/npapi -Ithird_party/npapi/bindings -Iv8/include -I/Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/./xcodebuild/WebKit.build/Release/webkit.build/DerivedSources/i386 -I/Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/./xcodebuild/WebKit.build/Release/webkit.build/DerivedSources -fno-strict-aliasing -c /Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/src/mac/WebInputEventFactory.mm -o /Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/./xcodebuild/WebKit.build/Release/webkit.build/Objects-normal/i386/WebInputEventFactory.o /Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/src/mac/WebInputEventFactory.mm:188:10: error: use of undeclared identifier 'NSEventTypeBeginGesture' case NSEventTypeBeginGesture: ^ /Volumes/data/b/WebKit-BuildSlave/chromium-mac-release/build/Source/WebKit/chromium/src/mac/WebInputEventFactory.mm:190:10: error: use of undeclared identifier 'NSEventTypeEndGesture' case NSEventTypeEndGesture: ^ 2 errors generated.
Tony Chang
Comment 10
2012-07-12 10:29:55 PDT
Reverted
r122477
for reason: Broke Chromium Mac build Committed
r122479
: <
http://trac.webkit.org/changeset/122479
>
Mark Mentovai
Comment 11
2012-07-12 11:31:11 PDT
Robert, at least for this patch, please use MAC_OS_X_VERSION_MAX_ALLOWED (without the two leading underscores) from <AvailabilityMacros.h> when testing for the 10.5 SDK. __MAC_OS_X_VERSION_MAX_ALLOWED (with the two leading underscores) is defined incorrectly in this SDK. See
http://lists.webkit.org/pipermail/webkit-dev/2012-July/021442.html
.
Robert Sesek
Comment 12
2012-07-12 11:53:20 PDT
Created
attachment 152014
[details]
Patch
Robert Sesek
Comment 13
2012-07-12 11:54:07 PDT
Okay, updated patch uploaded, per
comment 12
. Also removed unnecessary #include.
WebKit Review Bot
Comment 14
2012-07-12 13:19:20 PDT
Comment on
attachment 152014
[details]
Patch Clearing flags on attachment: 152014 Committed
r122496
: <
http://trac.webkit.org/changeset/122496
>
WebKit Review Bot
Comment 15
2012-07-12 13:19:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug