[chromium][Mac] r122400 broke 10.6 build https://bugs.webkit.org/show_bug.cgi?id=91103

Patch by Robert Sesek <rsesek@chromium.org> on 2012-07-12
Reviewed by Tony Chang.

Use the right availability macros for forward-declaring methods and
defining constants.

* src/mac/WebInputEventFactory.mm:

git-svn-id: svn://svn.chromium.org/blink/trunk@122477 bbb929c8-8fbe-4397-9dbb-9b2b20218538