third_party/WebKit/Source/WebKit/chromium/src/mac/WebInputEventFactory.mm
@@ -29,13 +29,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebInputEventFactory.h"
 
 #include <ApplicationServices/ApplicationServices.h>
+#include <Availability.h>
 #import <Cocoa/Cocoa.h>
 
 #import "KeyEventCocoa.h"
 #include "WebInputEvent.h"
 #include <wtf/ASCIICType.h>
 
-#if __MAC_OS_X_VERSION_MIN_REQUIRED <= 1060
+#if __MAC_OS_X_VERSION_MAX_ALLOWED < 1070
 
 // Additional Lion APIs.
 enum {
@@ -54,9 +55,9 @@ typedef NSUInteger NSEventPhase;
 - (NSEventPhase)momentumPhase;
 @end
 
-#endif  // __MAC_OS_X_VERSION_MIN_REQUIRED <= 1060
+#endif  // __MAC_OS_X_VERSION_MAX_ALLOWED < 1070
 
-#if __MAC_OS_X_VERSION_MIN_REQUIRED == 1050
+#if __MAC_OS_X_VERSION_MAX_ALLOWED <= 1050
 
 // These are not defined in the 10.5 SDK but are defined in later SDKs inside
 // a MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_5 #ifdef.
@@ -65,7 +66,7 @@ enum {
     NSEventTypeEndGesture       = 20
 };
 
-#endif  // __MAC_OS_X_VERSION_MIN_REQUIRED == 1050
+#endif  // __MAC_OS_X_VERSION_MAX_ALLOWED <= 1050
 
 namespace WebKit {
 
